--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Project Template</string>
+    <string name="app_name">The GitHub App</string>
+    <string name="app_toolbar_title">Github Users</string>
+    <string name="github_user_search">Search</string>
+    <string name="github_user_filter">Filter</string>
 </resources>
